k8s/deployment-with-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-cache
spec:
  selector:
    matchLabels:
      name: stats-cache
  template:
    metadata:
      labels:
        name: stats-cache
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: cache
        image: redis:5-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: stats-cache
spec:
  selector:
    name: stats-cache
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-queue
spec:
  selector:
    matchLabels:
      name: stats-queue
  template:
    metadata:
      labels:
        name: stats-queue
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: queue
        image: rabbitmq:3-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: stats-queue
spec:
  selector:
    name: stats-queue
  ports:
  - port: 5672
    targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-worker
spec:
  selector:
    matchLabels:
      name: stats-worker
  template:
    metadata:
      labels:
        name: stats-worker
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: stats-worker
        image: mindarodev.azurecr.io/samples/stats-worker:v7
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-api
spec:
  selector:
    matchLabels:
      name: stats-api
  template:
    metadata:
      labels:
        name: stats-api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: stats-api
        image: mindarodev.azurecr.io/samples/stats-api:v7
        resources:
          limits:
            cpu: "300m"
            memory: "300Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        livenessProbe:
          httpGet:
            path: /hello
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /hello
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
        volumeMounts:
          - name: pvcvolume
            mountPath: "/mnt/data"
      volumes:
        - name: pvcvolume
          persistentVolumeClaim:
            claimName: mypvc
---
apiVersion: v1
kind: Service
metadata:
  name: stats-api
spec:
  selector:
    name: stats-api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-db
spec:
  selector:
    matchLabels:
      name: todos-db
  template:
    metadata:
      labels:
        name: todos-db
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: todos-db
        image: mongo:4
---
apiVersion: v1
kind: Service
metadata:
  name: todos-db
spec:
  selector:
    name: todos-db
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: frontend
        image: mindarodev.azurecr.io/samples/frontend:v7
        volumeMounts:
          - name: fevolume
            mountPath: "/mnt/log"
      volumes:
        - name: fevolume
          persistentVolumeClaim:
            claimName: fepvc

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    name: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-api
spec:
  selector:
    matchLabels:
      name: database-api
  template:
    metadata:
      labels:
        name: database-api
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
      - name: database-api
        image: mindarodev.azurecr.io/samples/database-api:v8
---
apiVersion: v1
kind: Service
metadata:
  name: database-api
spec:
  selector:
    name: database-api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: todo.bushwood.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80
